# pallet-contracts-xcm

./: .gitignore  Cargo.toml  README.md  zombienet.toml
.github/workflows/: ci.yml
ink/: Cargo.toml  lib.rs
runtime/: Cargo.toml
runtime/src/: chain_ext.rs  lib.rs
src/: chain_ext.rs  lib.rs
test/: Cargo.toml  build.rs
test/contract/: Cargo.toml  lib.rs
test/mock-network/: Cargo.toml
test/mock-network/src/: lib.rs
test/mock-network/src/mocks/: relay_message_queue.rs
test/mock-network/src/parachain/: contracts_config.rs  mod.rs
test/mock-network/src/relay_chain/: mod.rs
test/src/: contract_utils.rs  lib.rs  tests.rs
