[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", branch = "at/update-secp256k1", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", branch = "at/update-secp256k1", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", branch = "at/update-secp256k1", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", branch = "at/update-secp256k1", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", branch = "at/update-secp256k1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false }

[lib]
name = "flipper"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "xcm/std",
]
ink-as-dependency = []
