[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-contracts-xcm"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
num_enum = { version = "0.5", default-features = false }
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1", optional = true, features = ["derive"] }
log = { version = "0.4", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"num_enum/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-contracts/std",
	"pallet-xcm/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks"
]
